# Observal

./: .dockerignore  AGENTS.md  CHANGELOG.md  README.md  pnpm-lock.yaml  pyproject.toml  test-agent.json
.github/workflows/: terraform.yml
docker/: Dockerfile.web
docs/: DEVELOPMENT_GUIDE.md  SUMMARY.md  adding-a-harness.md  adding-an-ide.md  e2e-test-checklist-enterprise.md
docs/cli/: README.md  agent.md  doctor.md  migrate.md  models.md  profile.md  pull.md  registry.md  scan.md  support.md
docs/getting-started/: core-concepts.md  quickstart.md
docs/integrations/: claude-code.md  codex-cli.md  copilot-cli.md  cursor.md  gemini-cli.md  kiro.md  vscode.md
docs/reference/: config-files.md  hooks-spec.md
docs/self-hosting/: telemetry-pipeline.md
docs/use-cases/: share-agent-configs.md  team-registry.md
ee/observal_insights/: metrics.py  session_cache.py
ee/observal_server/routes/: admin_sso.py  audit.py  sso_saml.py
observal-server/: main.py  pyproject.toml  worker.py
observal-server/alembic/versions/: 0009_drop_goal_template_tables.py  010_global_unique_names_global_unique_names.py
observal-server/api/: deps.py  graphql.py
observal-server/api/routes/: agent.py  agent_versions.py  alert.py  auth.py  bulk.py  co_authors.py  config.py  exec_dashboard.py  hook.py  insights.py  mcp.py  preview.py  prompt.py  reconcile.py  review.py  sandbox.py  sessions.py  skill.py
observal-server/api/routes/admin/: enterprise_settings.py
observal-server/api/routes/agent/: crud.py  install.py
observal-server/models/: __init__.py  agent.py  hook.py  mcp.py  prompt.py  sandbox.py  skill.py
observal-server/schemas/: admin.py  agent.py  auth.py  bulk.py  constants.py  harness_registry.py  hook.py  ide_registry.py  mcp.py  prompt.py  sandbox.py  skill.py
observal-server/services/: agent_builder.py  agent_builder_types.py  agent_snapshot.py  config_generator.py  dynamic_settings.py  hook_config_generator.py  hook_install_generator.py  insight_version_filters.py  mcp_validator.py  model_catalog.py  model_resolver.py  ownership.py  registry_telemetry.py  session_ingest.py  skill_config_generator.py  sso_diagnostics.py
observal-server/services/clickhouse/: client.py  schema.py
observal-server/services/eval/: eval_service.py
observal-server/services/harness/: __init__.py  antigravity.py  codex.py  helpers.py  kiro.py  opencode.py
observal-server/services/ide/: claude_code.py  kiro.py
observal-server/services/insights/: batch.py  html_export.py  session_meta_extractor.py  version_impact.py
observal-server/services/session_parsers/: __init__.py  cursor.py  ingest_classify.py  kiro.py
observal-server/tests/: test_agent_config_gen_versioned.py  test_agent_pull.py  test_agent_versions_api.py  test_harness_capability_inference.py
observal_cli/: cmd_agent.py  cmd_co_authors.py  cmd_component.py  cmd_doctor.py  cmd_hook.py  cmd_mcp.py  cmd_migrate.py  cmd_models.py  cmd_outdated.py  cmd_prompt.py  cmd_pull.py  cmd_reconcile_cli.py  cmd_sandbox.py  cmd_scan.py  cmd_skill.py  cmd_transfer.py  harness_registry.py  layer.py  lockfile.py  main.py  model_catalog.py  render.py  shim.py  upgrade_executor.py  version_check.py
observal_cli/harness/: __init__.py
observal_cli/hooks/: antigravity_session_push.py  copilot_cli_session_push.py  copilot_vscode_session_push.py
observal_cli/ide/: __init__.py  base.py  claude_code.py  codex.py  copilot.py  copilot_cli.py  cursor.py  gemini_cli.py  kiro.py  load_all.py  opencode.py  pi.py  protocol.py  vscode.py
observal_cli/sessions/: base.py
observal_cli/shared/: utils.py
observal_cli/skills/observal-agents/: SKILL.md
observal_cli/skills/observal-registry/: SKILL.md
observal_cli/skills/observal/references/: commands.md
observal_cli/tests/: test_cmd_agent_versions.py
scripts/: check_vulnerabilities.py  refresh_harness_models.py  seed_test_skill.py  update_spdx_copyright.py
tests/: test_agent_builder_skills.py  test_agent_composition.py  test_agent_config_generator.py  test_agent_name_lookup.py  test_alert_evaluator.py  test_antigravity_sessions.py  test_audit2_pr1_ingest_bounds.py  test_cli_harness_adapters.py  test_cli_ide_adapters.py  test_constants_sync.py  test_copilot_integration.py  test_draft_workflow.py  test_global_unique_names.py  test_harness_config_e2e.py  test_harness_refactor_baseline.py  test_harness_registry.py  test_insights_legacy_version.py  test_integration.py  test_migrate.py  test_model_registry.py  test_preview_config.py  test_pull_and_agent_cli.py  test_reconcile_subagent.py  test_schema_redesign.py  test_sec006_password_policy.py  test_sec009_org_scoping.py  test_sec027_registry_sc.py  test_self_registration.py  test_skill_config_generator.py
tests/e2e/: agent-edit-form.spec.ts  frontend-flows.spec.ts  real-edit-release.spec.ts  review-diff-screenshots.spec.ts  unarchive-agent.spec.ts
tests/eval/: test_phase8g_pipeline.py
web/: AGENTS.md  README.md  package.json
web/src/: routeTree.gen.ts
web/src/app/(admin)/audit-log/: page.tsx
web/src/app/(admin)/review/: page.tsx
web/src/app/(admin)/security-events/: page.tsx
web/src/app/(admin)/settings/: page.tsx
web/src/app/(auth)/login/: page.tsx
web/src/app/(registry)/: page.tsx
web/src/components/nav/: registry-sidebar.tsx
web/src/components/registry/: agent-edit-form.tsx  component-install-command.tsx  pull-command.tsx  submit-component-dialog.tsx
web/src/components/review/: review-diff-sheet.tsx
web/src/components/ui/: code-editor.tsx
web/src/components/wiki/: wiki-renderer.tsx
web/src/hooks/: use-api.ts  use-deployment-config.ts  use-review-api.ts  use-sessions-api.ts
web/src/lib/: api.ts  docs-loader.ts  features.ts  graphql-ws.ts  types.ts  utils.ts
web/src/lib/types/: admin.ts  registry.ts
web/src/pages/: login.tsx  register.tsx
web/src/pages/admin/: settings.tsx  users.tsx
web/src/pages/admin/insights/: detail.tsx
web/src/pages/registry/agents/: detail.tsx  index.tsx
web/src/pages/user/: account.tsx
web/src/pages/wiki/: index.tsx
web/src/routes/(auth)/: register.tsx
(+6 files in other folders)
