# SPDX-FileCopyrightText: 2026 Hari Srinivasan <harisrini21@gmail.com>
# SPDX-FileCopyrightText: 2026 Kaushik Kumar <kaushikrjpm10@gmail.com>
# SPDX-FileCopyrightText: 2026 Lokesh Selvam <lokeshselvam7025@gmail.com>
# SPDX-FileCopyrightText: 2026 Shreem Seth <shreemseth26@gmail.com>
# SPDX-License-Identifier: AGPL-3.0-only

[project]
name = "observal-server"
version = "1.1.1"
description = "Observal API server"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "email-validator",
    "alembic",
    "httpx",
    "gitpython>=3.1.50",
    "boto3",
    "redis[hiredis]",
    "arq",
    "strawberry-graphql[fastapi]>=0.315.4",
    "authlib>=1.6.11",
    "itsdangerous",
    "cryptography>=44.0.0",
    "python3-saml>=1.16.0",
    "cffi",
    "slowapi",
    "PyJWT>=2.8.0",
    "aiosqlite>=0.22.1",
    "tenacity>=8.0.0",
    "python-multipart>=0.0.26",
    "fastapi-cache2[redis]>=0.2.2",
    "jinja2>=3.1.0",
    "mako>=1.3.11",
    "structlog>=24.1.0",
    "loguru>=0.7.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "urllib3>=2.7.0",
    "idna>=3.15",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pyyaml",
    "typer",
    "rich",
]

[tool.coverage.run]
source = ["../observal_cli", "."]
omit = ["tests/*", "**/tests/*", "../ee/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
