# SPDX-FileCopyrightText: 2026 Hari Srinivasan <harisrini21@gmail.com>
# SPDX-FileCopyrightText: 2026 Kaushik Kumar <kaushikrjpm10@gmail.com>
# SPDX-FileCopyrightText: 2026 Lokesh Selvam <lokeshselvam7025@gmail.com>
# SPDX-FileCopyrightText: 2026 Shreem Seth <shreemseth26@gmail.com>
# SPDX-License-Identifier: AGPL-3.0-only

[project]
name = "observal-server"
version = "1.9.2"
description = "Observal API server"
requires-python = ">=3.11"
license = "AGPL-3.0-only"
dependencies = [
    "fastapi>=0.136.0,!=0.136.3",
    "starlette>=1.3.1",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "pydantic",
    "pydantic-settings>=2.14.2",
    "python-dotenv",
    "email-validator",
    "alembic",
    "httpx",
    "gitpython>=3.1.50",
    "boto3",
    "litellm>=1.80.0,<1.90.0",
    "redis[hiredis]>=5.0",
    "arq",
    "strawberry-graphql[fastapi]>=0.315.4",
    "authlib>=1.6.11",
    "itsdangerous",
    "cryptography>=48.0.1",
    "python3-saml>=1.16.0",
    "slowapi",
    "PyJWT>=2.13.0",
    "aiosqlite>=0.22.1",
    "tenacity>=8.0.0",
    "python-multipart>=0.0.31",
    "packaging>=21.0",
    "fastapi-cache2>=0.2.2",
    "structlog>=24.1.0",
    "loguru>=0.7.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "urllib3>=2.7.0",
    "idna>=3.15",
    "orjson>=3.10.0",
    "xxhash>=3.4.0",
    "observal-shared",
]

[tool.uv.sources]
observal-shared = { path = "../packages/observal-shared" }

[tool.uv]
# CVE-2026-48710 / CVE-2026-54282 / CVE-2026-54283: starlette <1.3.1 has
# Host header poisoning, url-authority confusion, and unbounded urlencoded
# form parsing. prometheus-fastapi-instrumentator 7.1.0 caps starlette<1.0.0
# but is runtime-compatible with 1.x (only a type annotation differs).
# Remove this override when upstream releases starlette 1.x support.
override-dependencies = [
    "starlette>=1.3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pyyaml",
    "typer",
    "rich",
]

[tool.coverage.run]
source = ["../observal_cli", "."]
omit = ["tests/*", "**/tests/*", "../ee/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
